--- a/config/_default/menus.zh.toml
+++ b/config/_default/menus.zh.toml
@@ -2,23 +2,23 @@
 
 # main menu
 [[main]]
-name = "Home"
+name = "首页"
 url = "/"
 weight = 1
 
 [[main]]
-name = "About"
+name = "关于"
 url = "/about"
 weight = 2
 
 [[main]]
-name = "Elements"
+name = "元素"
 url = "/elements"
 weight = 3
 
 [[main]]
 weight = 4
-name = "Pages"
+name = "页面"
 
 [[main]]
 parent = "Pages"
@@ -48,12 +48,12 @@ url = "/404"
 
 # footer menu
 [[footer]]
-name = "About"
+name = "关于"
 url = "/about"
 weight = 1
 
 [[footer]]
-name = "Elements"
+name = "元素"
 url = "/elements"
 weight = 2
 
