Add zh-cn blog/Notes

--- a/config/_default/languages.toml
+++ b/config/_default/languages.toml
@@ -2,7 +2,7 @@
 [zh]
 languageName = "zh"
 languageCode = "zh-cn"
-contentDir = "content/zh"
+contentDir = "content/chinese"
 weight = 1
 
 ################ English language ##################
